# market_research_agent

./: README.md  pyproject.toml  report.md
src/market_research_agent/: crew.py  main.py
src/market_research_agent/config/: agents.yaml  tasks.yaml
